fix spacing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -447,6 +447,7 @@ div.container{
 				display: inline;
 			}
 			.hotel{
+				margin-top:20px;
 				span{
 					@media #{$phone}{
 						display: block;
